INFRA-11 Comment out Neo4j instance

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,23 +29,23 @@ services:
     networks:
       - connect_network
 
-  neo4j:
-    container_name: connect-neo4j
-    image: neo4j:5.13-community
-    restart: always
-    environment:
-      - NEO4J_dbms_security_auth__minimum__password__length=3
-      - NEO4J_AUTH=neo4j/123
-    ports:
-      - '7474:7474'
-      - '7687:7687'
-    volumes:
-      - ./neo4j/data:/data
-      - ./neo4j/logs:/logs
-      - ./neo4j/import:/var/lib/neo4j/import
-      - ./neo4j/plugins:/plugins
-    networks:
-      - connect_network
+#  neo4j:
+#    container_name: connect-neo4j
+#    image: neo4j:5.13-community
+#    restart: always
+#    environment:
+#      - NEO4J_dbms_security_auth__minimum__password__length=3
+#      - NEO4J_AUTH=neo4j/123
+#    ports:
+#      - '7474:7474'
+#      - '7687:7687'
+#    volumes:
+#      - ./neo4j/data:/data
+#      - ./neo4j/logs:/logs
+#      - ./neo4j/import:/var/lib/neo4j/import
+#      - ./neo4j/plugins:/plugins
+#    networks:
+#      - connect_network
     
 networks:
   connect_network:
